[project]
name = "keylogger"
version = "1.0.0"
description = "Educational keylogger for security research and testing"
requires-python = ">=3.9"
authors = [
    {name = "deepmaha2006"}
]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "pynput>=1.7.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
windows = [
    "pywin32>=311",
    "psutil>=5.9.0",
]

macos = [
    "pyobjc-framework-Cocoa>=9.0",
]

dev = [
    "pytest>=7.0.0",
    "yapf>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["keylogger.py"]


[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]


[tool.pylint.messages_control]
disable = [
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods
    "W0718",  # broad-exception-caught
    "C0103",  # invalid-name
    "R1732",  # consider-using-with
]

[tool.pylint.design]
max-args = 8
max-attributes = 10
max-branches = 15
max-locals = 15
max-statements = 50
